fix: spotless plugin (palantir with google style)
Signed-off-by: xstefank <xstefank122@gmail.com>